--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "react-dev": "webpack -d --watch",
-    "be-start": "nodemon server.js"
+    "be-start": "nodemon server.js",
+    "fe-start": "live-server ./client/dist"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "live-server": "^1.2.1",
     "nodemon": "^2.0.2",
     "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.42.0",
@@ -35,6 +37,7 @@
     "express": "^4.17.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
