--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "webpack --mode production",
     "react-dev": "webpack -d --watch",
-    "be-start": "nodemon server.js",
-    "fe-start": "live-server ./client/dist --port=9000"
+    "be-start": "NODE_ENV=staging nodemon server.js",
+    "fe-start": "live-server ./client/dist --port=9000",
+    "start": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -32,8 +33,12 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "aws-amplify": "^2.2.6",
+    "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
+    "cognito-express": "^2.0.16",
     "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "pg": "^7.18.2",
