--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "react-dev": "webpack -d --watch",
     "be-start": "NODE_ENV=staging nodemon server.js",
-    "fe-start": "live-server ./client/dist --port=9000",
+    "fe-start": "webpack-dev-server",
     "start": "NODE_ENV=production node server.js"
   },
   "repository": {
@@ -29,8 +29,10 @@
     "live-server": "^1.2.1",
     "nodemon": "^2.0.2",
     "redux-devtools-extension": "^2.13.8",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "aws-amplify": "^2.2.6",
@@ -47,7 +49,6 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "style-loader": "^1.1.3"
+    "redux-thunk": "^2.3.0"
   }
 }
