--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cognito-express": "^2.0.16",
     "cors": "^2.8.5",
     "custom-env": "^2.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "pg": "^7.18.2",
