adddd nav to bike panel

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "normalizr": "^3.6.0",
     "pg": "^7.18.2",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
