--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@ awsconfiguration.json
 amplifyconfiguration.json
 amplify-gradle-config.json
 amplifyxc.config
+
+#jekyll
+vendor/
+.bundle/
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
