--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-axios-middleware": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "xdate": "^0.8.2"
   }
