update sample .env

--- a/.env_sample
+++ b/.env_sample
@@ -1,16 +1,15 @@
-APP_ENV=
+APP_ENV=development
 
-SERVER_PORT=
-SERVER_URL=
+SERVER_PORT=8080
+SERVER_URL=http://localhost
 THIS_API=$SERVER_URL:$SERVER_PORT/api
 
-CLIENT_PORT=
-CLIENT_URL=
+CLIENT_PORT=9000
+CLIENT_URL=http://localhost
 CLIENT=$CLIENT_URL:$CLIENT_PORT
 
 
 COGNITO_USER_POOL_ID=
-AMPLIFY_LOGIN_REDIRECT=
 
 
 STRAVA_API=https://www.strava.com/api/v3
