--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "fe-dev": "webpack-dev-server --env.ENVIRONMENT=development",
-    "build": "webpack --env.ENVIRONMENT=development --mode production",
-    "start": "NODE_ENV=production node app.js"
+    "build": "webpack --env.ENVIRONMENT=production --mode production",
+    "start": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "axios": "^0.19.2",
     "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "normalizr": "^3.6.0",
     "react": "^16.13.0",
