--- a/.env_sample
+++ b/.env_sample
@@ -1,8 +1,8 @@
 APP_ENV=development
 
-SERVER_PORT=8080
-SERVER_URL=http://localhost
-THIS_API=$SERVER_URL:$SERVER_PORT/api
+API_PORT=8080
+API_URL=http://localhost
+THIS_API=$API_URL:$API_PORT/api
 
 CLIENT_PORT=9000
 CLIENT_URL=http://localhost
