--- a/api/package.json
+++ b/api/package.json
@@ -18,39 +18,16 @@
   },
   "homepage": "https://github.com/nicolemunoz99/bikebikebike#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
-    "live-server": "^1.2.1",
-    "nodemon": "^2.0.2",
-    "redux-devtools-extension": "^2.13.8",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "aws-amplify": "^2.2.6",
-    "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
     "cognito-express": "^2.0.16",
     "cors": "^2.8.5",
-    "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "normalizr": "^3.6.0",
     "pg": "^7.18.2",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-axios-middleware": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "xdate": "^0.8.2"
   }
 }
