--- a/client/package.json
+++ b/client/package.json
@@ -35,9 +35,8 @@
     "aws-amplify": "^2.2.6",
     "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
-    "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv-expand": "^5.1.0",
     "lodash": "^4.17.15",
     "normalizr": "^3.6.0",
     "react": "^16.13.0",
