--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "cognito-express": "^2.0.16",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "pg": "^7.18.2",
